fixed duration alignment and displays msg if there are no games

--- a/pages/lobbies/lobbies.css
+++ b/pages/lobbies/lobbies.css
@@ -49,3 +49,7 @@
 #lobbies-list-ul li:not(:last-child) {
     margin-bottom: 10px;
 }
+
+#game-duration {
+    text-align: center;
+}
